# half

./: .gitignore  AGENTS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  README.md  README.zh-CN.md  ROADMAP.md  ROADMAP.zh-CN.md  SECURITY.md  SECURITY.zh-CN.md
src/backend/: .dockerignore  Dockerfile  access.py  auth.py  config.py  logging.yml  main.py  models.py  pyproject.toml
src/backend/middleware/: rate_limit.py
src/backend/routers/: agent_settings.py  agents.py  auth.py  codex_usage.py  plans.py  polling.py  process_templates.py  projects.py  settings.py  tasks.py  users.py
src/backend/services/: agent_credentials.py  auto_dispatch.py  codex_usage_cache.py  demo_seed.py  feishu_service.py  git_service.py  issue_review_loop.py  path_service.py  polling_config_service.py  polling_service.py  prompt_service.py
src/backend/tests/: test_admin_public_agents.py  test_admin_user_management.py  test_agent_owner_repair.py  test_agent_type_config_seed.py  test_agent_update_semantics.py  test_auto_dispatch.py  test_codex_usage_cache.py  test_contract_fields.py  test_demo_seed.py  test_feishu_notifications.py  test_git_service.py  test_issue_review_loop.py  test_path_service.py  test_plan_500_regression.py  test_plan_assignee_resolution.py  test_plan_finalize_validation.py  test_polling_service.py  test_polling_settings.py  test_process_templates.py  test_project_agent_availability.py  test_project_isolation.py  test_project_owner_repair.py  test_prompt_service.py  test_rq0410_1.py  test_schema_migrations.py  test_task_predecessor_status.py  (+1 more)
(+90 files in other folders)
