[project]
name = "half-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.2",
    "uvicorn>=0.49.0",
    "sqlalchemy>=2.0.51",
    "pyjwt>=2.13.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "python-multipart>=0.0.31",
    "json-repair>=0.61.1",
    "python-dotenv>=1.2.2",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest",
]
